ckad/network-policy/assets/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: golden-hawk
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
