ckad/network-policy/assets/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: frontend
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
