ckad/network-policy/assets/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: golden-hawk
spec:
  podSelector:
    matchLabels:
      role: restricted
  policyTypes:
  - Ingress
  - Egress
---
